# 6502Emulator

./: 6502Emulator.pptx  CMakeLists.txt  EndEvaluation_6502Emulator.ppt  Makefile  README.md  codeLoad.hpp  instructionCycle.cpp  memory.cpp  processor.cpp  project.docx
OPCODE INPUT/: opcodeInput1.txt
asm_ex/: MUL.asm  POW.asm  ROL.asm  ROR.asm
src/: codeLoad.cpp  codeLoad.hpp  dataView.cpp  dataView.hpp  instructionCycle.cpp  instructionCycle.hpp  main.cpp  memory.cpp  memory.hpp  processor.cpp  processor.hpp  style.css  ui_render.cpp  ui_render.hpp
